--- a/DhaliProcurement/Views/PurchaseOrders/Create.cshtml
+++ b/DhaliProcurement/Views/PurchaseOrders/Create.cshtml
@@ -201,7 +201,7 @@
                                 <td></td>
                                 <td></td>
                                 <td></td>
-                                <td><span class="error" id="POQuantity_Error" style="padding-left:10px;">PO Quantity required</span></td>
+                                <td><span class="error" id="POQuantity_Error" style="padding-left:10px;"></span></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
@@ -339,8 +339,8 @@
             var quantity = $('#POQuantity1').val();
             var totalPrice = price * quantity;
             if (isNaN(totalPrice)) {
-                $('#POQuantity_Error').text('Unit Price must be a numeric value!').show();
-                $('#POQuantity1').val("");
+                //$('#POQuantity_Error').text('Unit Price must be a numeric value!').show();
+                //$('#POQuantity1').val("");
                 $('#TotalPrice1').val("");
             }
             else {
@@ -360,7 +360,7 @@
             var totalPrice = price * quantity;
 
             if (isNaN(totalPrice)) {
-                alert('Unit Price must be a numeric value!!')
+                //alert('Unit Price must be a numeric value!!')
                 $(this).closest('tr').find("td:eq(6) input.TotalPriceNew").val("");
             }
             else {
@@ -416,26 +416,29 @@
             $('#POQuantity_Error').text("PO Quantity required").show();
         }
         else {
-            $('#POQuantity_Error').hide();
-        }
-
-        if ($('#POQuantity1').val().trim() != "") {
             if (isNaN($('#POQuantity1').val().trim())) {
                 isValidItem = false;
                 $('#POQuantity_Error').text("PO Quantity must be a numeric value!").show();
             }
             else {
-                $('#POQuantity_Error').hide();
+                if ($('#POQuantity1').val().trim().length > 18) {
+                    isValidItem = false;
+                    $('#POQuantity_Error').text("PO Quantity cannot be greater than 18 characters!").show();
+                }
+                else {
+                    $('#POQuantity_Error').hide();
+                }
+
             }
         }
 
-        $('table.Resource-list tr').each(function () {
-            var Item = $(this).find("td input[name=ItemName1]").val();
-            if (ItemName == Item) {
-                alert('This item already exists!');
-                isValidItem = false;
-            }
-        });
+        //$('table.Resource-list tr').each(function () {
+        //    var Item = $(this).find("td input[name=ItemName1]").val();
+        //    if (ItemName == Item) {
+        //        alert('This item already exists!');
+        //        isValidItem = false;
+        //    }
+        //});
         //Add item to list if valid
         if (isValidItem) {
 
@@ -495,14 +498,15 @@
 
                 totalItemCost();
             });
+            $('#TotalPrice1').val("");
+            $('#Size').val("");
+            $('#UnitName').val("");
+            $('#UnitPrice').val("");
+            $('#RequisitionQty').val("");
+            $('#POQuantity1').val("");
         }
 
-        $('#TotalPrice1').val("");
-        $('#Size').val("");
-        $('#UnitName').val("");
-        $('#UnitPrice').val("");
-        $('#RequisitionQty').val("");
-        $('#POQuantity1').val("");
+
 
         //end
     });
@@ -573,7 +577,10 @@
 
     });
 
-
+    $('#ModalClose').click(function () {
+        $('#ModalItemName_Error').hide();
+        $('#ModalPOQuantity_Error').hide();
+    });
 
     $('#Item-list').on({
         'change': function () {
@@ -732,13 +739,27 @@
         else {
             $('#Subject_Error').hide();
         }
-        if (isNaN(LeadTime)) {
+        if (LeadTime.trim() == "") {
             isValid = false;
-            $('#LeadTime_Error').text("Lead Time must be a numeric value!").show();
+            $('#LeadTime_Error').text("Lead Time required!").show();
         }
         else {
-            $('#LeadTime_Error').hide();
+            if (isNaN(LeadTime)) {
+                isValid = false;
+                $('#LeadTime_Error').text("Lead Time must be a numeric value!").show();
+            }
+            else {
+                if (LeadTime.trim() < 0 || LeadTime.trim().length > 4) {
+                    isValid = false;
+                    $('#LeadTime_Error').text("Lead Time cannot be greater than 4 characters or negative!").show();
+                }
+                else {
+                    $('#LeadTime_Error').hide();
+                }
+
+            }
         }
+
         if (Content.trim().length > 800) {
             isValid = false;
             $('#Content_Error').text("Content cannot be greater than 800 characters!").show();
