--- a/DhaliProcurement/Views/VendorPayments/Edit.cshtml
+++ b/DhaliProcurement/Views/VendorPayments/Edit.cshtml
@@ -763,7 +763,13 @@
                 isAllValid = false;
             }
             else {
-                $('#ModalPayment_Error').hide();
+                if (ModalPayment.length > 18) {
+                    $('#ModalPayment_Error').text("Payment mcannot be greater than 18 characters!").show();
+                    isAllValid = false;
+                }
+                else {
+                    $('#ModalPayment_Error').hide();
+                }
             }           
         }
         if (ModalRemarks.length > 50) {
@@ -1141,7 +1147,13 @@
                 $('#Payment_Error').text("Payment must be a numeric value!").show();
             }
             else {
-                $('#Payment_Error').hide();
+                if ($('#Payment').val().trim().length > 18) {
+                    isAllValid = false;
+                    $('#Payment_Error').text("Payment cannot be greater than 18 characters!").show();
+                }
+                else {
+                    $('#Payment_Error').hide();
+                }
             }           
         }
         if (Remarks.length> 50) {
